<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SDA_A5_Real_Estate_App_JasmineKhalimova</string>
    <string name="welcome_title">Welcome To ReMax</string>
    <string name="create_new_account">Create New Account</string>
    <string name="fullName">Full Name</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered ? Login Here</string>

    <string name="login">Create New Account</string>
    <string name="createText">New Here ? Create Account</string>
    <string name="loginBtn">Login</string>

    <string name="your_profile_title">Your Profile</string>
    <string name="profileName">Your Name</string>
    <string name="profileEmail">Your Email Address</string>
    <string name="logout_button">Logout</string>

    <string name="user_avatar">user avatar</string>
    <string name="verifymsg">Verify Your Email</string>
    <string name="verifybutton">Verify Button</string>

    <string name="forgot_password">Forgot Password</string>

    <string name="profile">Profile</string>
    <string name="listings">Listings</string>
    <string name="post_an_ad">Post An Ad</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>

    <string name="ads_fragment">Post An Ad</string>
    <string name="adTitle">Title: House for Sale/Rent</string>
    <string name="adCity">City</string>
    <string name="adArea">Area</string>
    <string name="adDescrip">Property description e.g No bedrooms, bath etc</string>
    <string name="price">€</string>
    <string name="displayImageView">propertyImage</string>
    <string name="addImage">Add Image</string>
    <string name="camerabtn">cameraBtn</string>
    <string name="contactInfo">Contact Information</string>
    <string name="advertiserName">Your Name</string>
    <string name="AdvertiserEmail">Your Email</string>
    <string name="post">Post</string>

    <string name="lisitngs_fregment">Listings</string>
    <string name="adImage">TODO</string>

    <string name="contactSection">Contact Us</string>
    <string name="officeAddress">Castleforbes Square, Dublin 1, Ireland</string>
    <string name="call_us">Tell: <a href="tel:+3531234987"> +353 1234987</a></string>
    <string name="email_us">Email:<a href="info@remax.com"> info@remax.com</a></string>
    <string name="lgo">logo</string>
    <string name="officeMap">officeMap</string>

</resources>
